// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`freeform editor snapshots opened 1`] = `
<WithStyles(Popover)
  anchorEl={Object {}}
  anchorOrigin={
    Object {
      "horizontal": "right",
      "vertical": "top",
    }
  }
  classes={
    Object {
      "paper": "positive",
    }
  }
  elevation={2}
  onClose={[Function]}
  open={true}
  style={
    Object {
      "marginTop": "10px",
      "transition": "margin-top 2s ease-out",
    }
  }
  transformOrigin={
    Object {
      "horizontal": "left",
      "vertical": "top",
    }
  }
>
  <div
    className="positive"
  >
    <TextField
      InputProps={
        Object {
          "disableUnderline": true,
        }
      }
      autoFocus={true}
      id="annotation-editor"
      multiline={true}
      onChange={[Function]}
      required={false}
      rows={1}
      rowsMax={4}
      select={false}
      style={
        Object {
          "padding": "2px 5px",
          "width": "95%",
        }
      }
      value="note"
      variant="standard"
    />
    <div>
      <div
        onClick={[MockFunction]}
      >
        Delete
      </div>
      <div
        className="positive"
        onClick={[Function]}
      >
        Pink
      </div>
      <div
        onClick={[Function]}
      >
        Save
      </div>
    </div>
  </div>
</WithStyles(Popover)>
`;

exports[`freeform editor snapshots opened, negative type 1`] = `
<WithStyles(Popover)
  anchorEl={Object {}}
  anchorOrigin={
    Object {
      "horizontal": "right",
      "vertical": "top",
    }
  }
  classes={
    Object {
      "paper": "negative",
    }
  }
  elevation={2}
  onClose={[Function]}
  open={true}
  style={
    Object {
      "marginTop": "10px",
      "transition": "margin-top 2s ease-out",
    }
  }
  transformOrigin={
    Object {
      "horizontal": "left",
      "vertical": "top",
    }
  }
>
  <div
    className="negative"
  >
    <TextField
      InputProps={
        Object {
          "disableUnderline": true,
        }
      }
      autoFocus={true}
      id="annotation-editor"
      multiline={true}
      onChange={[Function]}
      required={false}
      rows={1}
      rowsMax={4}
      select={false}
      style={
        Object {
          "padding": "2px 5px",
          "width": "95%",
        }
      }
      value="note"
      variant="standard"
    />
    <div>
      <div
        onClick={[MockFunction]}
      >
        Delete
      </div>
      <div
        className="negative"
        onClick={[Function]}
      >
        Green
      </div>
      <div
        onClick={[Function]}
      >
        Save
      </div>
    </div>
  </div>
</WithStyles(Popover)>
`;

exports[`freeform editor snapshots renders 1`] = `
<WithStyles(Popover)
  anchorEl={Object {}}
  anchorOrigin={
    Object {
      "horizontal": "right",
      "vertical": "top",
    }
  }
  classes={
    Object {
      "paper": "positive",
    }
  }
  elevation={2}
  onClose={[Function]}
  open={false}
  style={
    Object {
      "marginTop": "10px",
      "transition": "margin-top 2s ease-out",
    }
  }
  transformOrigin={
    Object {
      "horizontal": "left",
      "vertical": "top",
    }
  }
>
  <div
    className="positive"
  >
    <TextField
      InputProps={
        Object {
          "disableUnderline": true,
        }
      }
      autoFocus={true}
      id="annotation-editor"
      multiline={true}
      onChange={[Function]}
      required={false}
      rows={1}
      rowsMax={4}
      select={false}
      style={
        Object {
          "padding": "2px 5px",
          "width": "95%",
        }
      }
      value="note"
      variant="standard"
    />
    <div>
      <div
        onClick={[MockFunction]}
      >
        Delete
      </div>
      <div
        className="positive"
        onClick={[Function]}
      >
        Pink
      </div>
      <div
        onClick={[Function]}
      >
        Save
      </div>
    </div>
  </div>
</WithStyles(Popover)>
`;
